<resources>
    <string name="app_name">VideoStation - Dada</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_film">FilmActivity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_detail_item">DetailItemActivity</string>
    <string name="locdvd_resumer">Synopsis</string>
    <string name="locdvd_actor">Actor: </string>
    <string name="locdvd_titre_ba_bo">SoundTrack and Trailer</string>
    <string name="locdvd_ba">Trailer</string>
    <string name="locdvd_bo">SoundTrack</string>
    <string name="locdvd_memo">Memo</string>
    <string name="locdvd_memo_rec">Record</string>
    <string name="locdvd_memo_play">Play</string>
    <string name="locdvd_memo_del">Delete</string>
    <string name="locdvd_rental">DVD Rental</string>
    <string name="title_activity_actor">ActorActivity</string>
    <string name="locdvd_movie">Movies</string>
    <string name="locdvd_series">Tv Show</string>
    <string name="title_activity_tv_show">TvShowActivity</string>
    <string name="title_activity_detail_tv_show">DetailTvShowActivity</string>
    <string name="locdvd_season">Season</string>
    <string name="locdvd_tv_zod_season">Season: %1$d</string>
    <string name="locdvd_tv_zod_episode">Episode: %1$d</string>
    <string name="locdvd_num_season_and_zod">S%1$dE%2$d</string>
    <string name="title_activity_detail_tv_zod">DetailTvZodActivity</string>
    <plurals name="locdvd_actor_nb_zod">
        <item quantity="zero">episode none</item>
        <item quantity="one">%d episode</item>
        <item quantity="few">%d episodes</item>
        <item quantity="many">%d episodes</item>
        <item quantity="other">%d episodes</item>
    </plurals>
    <plurals name="locdvd_actor_nb_movie">
        <item quantity="zero">movie none</item>
        <item quantity="one">%d movie</item>
        <item quantity="few">%d movies</item>
        <item quantity="many">%d movies</item>
        <item quantity="other">%d movies</item>
    </plurals>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locdvd_action_video_propriety">Video properties</string>
    <string name="locdvd_file_path">File path :</string>
    <string name="locdvd_file_size">File size :</string>
    <string name="locdvd_file_duration">Duration :</string>
    <string name="locdvd_resolution">Resolution :</string>
    <string name="locdvd_file_container">Container :</string>
    <string name="locdvd_file_video_bitrate">Video BitRate</string>
    <string name="locdvd_file_video_codec">Video Codec</string>
    <string name="locdvd_file_audio_codec">Audio Codex :</string>
    <string name="locdvd_file_audio_bitrate">Audio Bitrate :</string>
    <string name="locdvd_file_channel">Channel :</string>
    <string name="locdvd_movie_releasedate">Release Date: %s</string>
    <string name="locdvd_movie_duration">Duration: %s</string>
    <string name="locdvd_movie_genre">Genre: %s</string>
    <string name="locdvd_movie_real">Realisator: %s</string>
    <string name="locdvd_movie_rating">Rating: %s</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_ativity">SearchAtivity</string>
    <string name="locdvd_type">Type</string>
    <string name="locdvd_watched">Watched</string>
    <string name="locdvd_watch">watch</string>
    <string name="locdvd_not_watch">not watch</string>
    <string name="locdvd_resulotion">Resolution :</string>
    <string name="locdvd_hd_720">HD 720</string>
    <string name="locdvd_hd_1080">HD 1080</string>
    <string name="locdvd_sd">SD</string>
    <string name="locdvd_audio">Audio :</string>
    <string name="locdvd_audio_dts">DTS</string>
    <string name="locdvd_audio_5_1">5.1</string>
    <string name="locdvd_refresh">REFRESH</string>


</resources>
