<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSearchRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locdvd_refresh"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/txtSearchKeyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locdvd_type"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbSearchTypeMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchTypeMovie"
            android:text="@string/locdvd_movie"/>

        <CheckBox
            android:id="@+id/cbSearchTypeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchTypeTv"
            android:text="@string/locdvd_series"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locdvd_watched"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbSearchWatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchWatch"
            android:text="@string/locdvd_watch"/>

        <CheckBox
            android:id="@+id/cbSearchNotWatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchNotWatch"
            android:text="@string/locdvd_not_watch"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locdvd_resulotion"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbSearchResHD720"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchResHD720"
            android:text="@string/locdvd_hd_720"/>

        <CheckBox
            android:id="@+id/cbSearchResHD1080"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchResHD1080"
            android:text="@string/locdvd_hd_1080"/>

        <CheckBox
            android:id="@+id/cbSearchResSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchResSD"
            android:text="@string/locdvd_sd"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locdvd_audio"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbSearchAudioDTS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchAudioDTS"
            android:text="@string/locdvd_audio_dts"/>

        <CheckBox
            android:id="@+id/cbSearchAudio5_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/cbSearchAudio5_1"
            android:text="@string/locdvd_audio_5_1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locdvd_actor"/>

    <AutoCompleteTextView
        android:id="@+id/txtSearchActor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>