<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dada.res1.DetailVideoFileFragment">

     <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:columnCount="2">

        <TextView
            android:id="@+id/lblDetailVideFilePath"
            android:layout_column="0"
            android:text="@string/locdvd_file_path"
            android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
            android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
            android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
            android:layout_marginTop="@dimen/locdvd_file_detail_margin_top"
            />
         <TextView
             android:id="@+id/txtDetailVideFilePath"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginTop="@dimen/locdvd_file_detail_margin_top"
             android:text="test"
             />
         <TextView
             android:id="@+id/lblDetailVideFileSize"
             android:layout_column="0"
             android:text="@string/locdvd_file_size"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileSize"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/lblDetailVideFileDuration"
             android:layout_column="0"
             android:text="@string/locdvd_file_duration"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileDuration"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/lblDetailVideFileResolution"
             android:layout_column="0"
             android:text="@string/locdvd_resolution"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileResolution"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/lblDetailVideFileContainer"
             android:layout_column="0"
             android:text="@string/locdvd_file_container"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileContainer"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/lblDetailVideFileVideoCodec"
             android:layout_column="0"
             android:text="@string/locdvd_file_video_codec"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileVideoCodec"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />

         <TextView
             android:id="@+id/lblDetailVideFileVideoBitrate"
             android:layout_column="0"
             android:text="@string/locdvd_file_video_bitrate"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileVideoBitrate"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />

         <TextView
             android:id="@+id/lblDetailVideFileAudioCodec"
             android:layout_column="0"
             android:text="@string/locdvd_file_audio_codec"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileAudioCodec"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/lblDetailVideFileAudioBitrate"
             android:layout_column="0"
             android:text="@string/locdvd_file_audio_bitrate"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"

             />
         <TextView
             android:id="@+id/txtDetailVideFileAudioBitrate"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/lblDetailVideFileChannel"
             android:layout_column="0"
             android:text="@string/locdvd_file_channel"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />
         <TextView
             android:id="@+id/txtDetailVideFileChannel"
             android:layout_column="1"
             android:layout_marginBottom="@dimen/locdvd_file_detail_margin_bottom"
             android:layout_marginLeft="@dimen/locdvd_file_detail_margin_left"
             android:layout_marginStart="@dimen/locdvd_file_detail_margin_left"
             />



    </GridLayout>

</FrameLayout>
